# cpp-template

./: README.md  meson.build  template.sh
app/: meson.build
app/console/: main.cpp  meson.build
app/web/: client.cpp  meson.build  server.cpp
core/: example.cpp  example.hpp  example_tests.cpp  meson.build
